[project]
name = "terminal-cli"
version = "0.1.0"
description = "Quick check dataset"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.2.2",
    "pandas>=2.2.3",
    "polars>=1.27.1",
    "pyarrow>=19.0.1",
    "seaborn>=0.13.2",
]

[tool.uv]
cache-dir = "./.uv_cache"
